# fansme

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yaml  quality.yaml
src/: __init__.py  dependencies.py  main.py  models.py  schemas.py  settings.py
src/auth/: __init__.py  endpoints.py
src/features/: __init__.py
src/features/social/: __init__.py  dependencies.py  endpoints.py  schemas.py  settings.py
